--- a/style.css
+++ b/style.css
@@ -1,4 +1,71 @@
-html {
-  height: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  background: linear-gradient(300deg, #757b87, #909d9d);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+header {
+  height: 80px;
   width: 100%;
+  text-align: center;
+  background-color: aqua;
+  margin-top: 0%;
+}
+
+input {
+  padding: 1rem;
+  border-radius: 25px;
+  border: none;
+  background-color: #fff;
+  font-family: inherit;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  min-width: 300px;
+  font-size: 1rem;
+  margin-top: 2rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+.weather {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 2rem;
+}
+
+.weather h2 {
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.sub {
+  padding: 1rem;
+  border-radius: 25px;
+  background-color: #fff;
+  font-family: inherit;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  min-width: 100px;
+  font-size: 1rem;
+  border: 2px dotted;
+  margin-top: 1rem;
+}
+.error {
+  text-align: center;
+  font-size: 1.5rem;
+  color: red;
+  margin-top: 2rem;
+  text-rendering: auto;
 }
